se me olvidó ayer, localstorage links

--- a/links.html
+++ b/links.html
@@ -16,7 +16,7 @@
     />
     <input id="inputURL" type="text" placeholder="Pega aquí la URL" size="30" />
     <button class="insertButton" type="submit">Añadir enlace</button>
-    <div id="insertName" class="asdasd"></div>
+    <div id="insertName"></div>
     <div id="insertURL"></div>
     <script src="./js/link.js"></script>
   </body>
