--- a/links.html
+++ b/links.html
@@ -18,6 +18,6 @@
     <button class="insertButton" type="submit">Añadir enlace</button>
     <div id="insertName"></div>
     <div id="insertURL"></div>
-    <script src="./js/link.js"></script>
+    <script type="module" src="js/link.js"></script>
   </body>
 </html>
