--- a/reloj.html
+++ b/reloj.html
@@ -9,6 +9,6 @@
   <body>
     <div id="dateDisplay" class="date" onload="showDate()"></div>
     <div id="clockDisplay" class="clock" onload="showTime()"></div>
-    <script src="./js/reloj.js"></script>
+    <script type="module" src="./js/functions/reloj.js"></script>
   </body>
 </html>
