--- a/tiempo.html
+++ b/tiempo.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="insertClime"></div>
-    <script src="./js/tiempo.js"></script>
+    <script type="module" src="./js/functions/tiempo.js"></script>
   </body>
 </html>
