--- a/contraseñas.html
+++ b/contraseñas.html
@@ -13,6 +13,6 @@
     <button class="generate" type="submit">Generar contraseña</button>
     <div id="error-message"></div>
     <div id="generated"></div>
-    <script src="./js/contraseñas.js"></script>
+    <script type="module" src="./js/functions/contraseñas.js"></script>
   </body>
 </html>
